huggingface-gpt2/kustomize/overlays/prod/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpt2-service
spec:
  type: LoadBalancer
