huggingface-gpt2/kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpt2-ingress
spec:
  rules:
  - host: local-server
    http:
      paths:
      - path: /fastapi/prod(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: gpt2-service
            port:
              number: 8000
